results/print-ir/expected/failure/resolver/string_plus_float.psy.out
Parsed OK
error: Invalid concatenation of string with another type.
  --> tests/failure/resolver/string_plus_float.psy:2:23
   |
  2| var dyn result = "cats" + num;
   |                       ^--- Here


Semantic analysis failed. Compilation stopped.
